--- a/src/main/resources/com/example/postapp/add-article.fxml
+++ b/src/main/resources/com/example/postapp/add-article.fxml
@@ -38,5 +38,13 @@
             <Font name="Consolas" size="12.0" />
          </font>
       </TextArea>
+      <Button fx:id="BackButton" focusTraversable="false" layoutX="27.0" layoutY="18.0" mnemonicParsing="false" stylesheets="@../../../styles/main.css" text="Назад" textFill="WHITE">
+         <font>
+            <Font name="Consolas" size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
     </children>
 </AnchorPane>
